<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.RideFormularyScreen">

    <TextView
        android:id="@+id/appTitleFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/inputUserDataFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inputUserDataFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/enter_user_information"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/customer_id_input_fragment"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/userIdTitleFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/enter_user_id_title"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/customer_id_input_fragment"
        app:layout_constraintStart_toStartOf="@id/customer_id_input_fragment"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/customer_id_input_fragment"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/enter_user_id_input_text"
        app:layout_constraintBottom_toTopOf="@id/start_point_input_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/startingPointTitleFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/enter_origin_title"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/start_point_input_fragment"
        app:layout_constraintStart_toStartOf="@id/start_point_input_fragment"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/start_point_input_fragment"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/enter_origin_input_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/destinationTitleFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/enter_destination_title"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/destinationInputFragment"
        app:layout_constraintStart_toStartOf="@id/destinationInputFragment"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/destinationInputFragment"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_destination_input_text"
        app:layout_constraintTop_toBottomOf="@+id/start_point_input_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/buttonSearchRideFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/search_ride_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationInputFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>