<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".screens.TravelHistoryScreen">

        <TextView
            android:id="@+id/historyScreenTitleFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/travel_history_page_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_user_id_title"
            app:layout_constraintBottom_toTopOf="@id/userIdHistoryScreenFragment"
            app:layout_constraintStart_toStartOf="@id/userIdHistoryScreenFragment" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userIdHistoryScreenFragment"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:hint="@string/enter_user_id_input_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/historyScreenTitleFragment" />

        <Spinner
            android:id="@+id/spinnerDriverNameFragment"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:entries="@array/drivers_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userIdHistoryScreenFragment" />

        <Button
            android:id="@+id/searchHistoryButtonFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/search_travel_history_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerDriverNameFragment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/travelHistoryRecyclerViewFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchHistoryButtonFragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>